refactor: update error response