@@ -4,7 +4,6 @@ import static org.springframework.core.Ordered.HIGHEST_PRECEDENCE;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.annotation.Order;
@@ -16,6 +15,7 @@ import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
@@ -38,9 +38,12 @@ public class ControllerAdvices extends ResponseEntityExceptionHandler {
    * @return a ResponseEntity with a custom message and a BAD_REQUEST status
    */
   @ExceptionHandler(RestException.class)
-  public ResponseEntity<RestMessage> handleIllegalArgument(RestException ex) {
-    return new ResponseEntity<>(new RestMessage(ENTITY_NOT_FOUND,
-        List.of(ex.getMessage())
+  public ResponseEntity<RestMessage> handleIllegalArgument(RestException ex, ServletWebRequest request) {
+    return new ResponseEntity<>(new RestMessage(
+        HttpStatus.BAD_REQUEST.value(),
+        ex.getMessage(),
+        request.getRequest().getServletPath(),
+        ENTITY_NOT_FOUND
     ), HttpStatus.BAD_REQUEST);
   }
 
@@ -51,8 +54,14 @@ public class ControllerAdvices extends ResponseEntityExceptionHandler {
    * @return a ResponseEntity with a custom message and a NOT_FOUND status
    */
   @ExceptionHandler(EntityNotFoundException.class)
-  public ResponseEntity<RestMessage> handleEntityNotFound(EntityNotFoundException ex) {
-    return new ResponseEntity<>(new RestMessage(ENTITY_NOT_FOUND, List.of(ex.getMessage())),
+  public ResponseEntity<RestMessage> handleEntityNotFound(EntityNotFoundException ex,
+      ServletWebRequest request) {
+    return new ResponseEntity<>(new RestMessage(
+        HttpStatus.NOT_FOUND.value(),
+        ex.getMessage(),
+        request.getRequest().getServletPath(),
+        ENTITY_NOT_FOUND
+    ),
         NOT_FOUND);
   }
 
@@ -63,8 +72,14 @@ public class ControllerAdvices extends ResponseEntityExceptionHandler {
    * @return a ResponseEntity with a custom message and a BAD_REQUEST status
    */
   @ExceptionHandler(TournamentNotStartedException.class)
-  public ResponseEntity<RestMessage> handleTournamentNotStarted(TournamentNotStartedException ex) {
-    return new ResponseEntity<>(new RestMessage(TOURNAMENT_NOT_STARTED, List.of(ex.getMessage())),
+  public ResponseEntity<RestMessage> handleTournamentNotStarted(TournamentNotStartedException ex,
+      ServletWebRequest request) {
+    return new ResponseEntity<>(new RestMessage(
+        HttpStatus.BAD_REQUEST.value(),
+        ex.getMessage(),
+        request.getRequest().getServletPath(),
+        TOURNAMENT_NOT_STARTED
+    ),
         HttpStatus.BAD_REQUEST);
   }
 
@@ -76,9 +91,13 @@ public class ControllerAdvices extends ResponseEntityExceptionHandler {
    */
   @ExceptionHandler(UserNotReadyForNewTournamentException.class)
   public ResponseEntity<RestMessage> handleUserNotReadyForTournament(
-      UserNotReadyForNewTournamentException ex) {
-    return new ResponseEntity<>(
-        new RestMessage(USER_NOT_READY_FOR_TOURNAMENT, List.of(ex.getMessage())),
+      UserNotReadyForNewTournamentException ex, ServletWebRequest request) {
+    return new ResponseEntity<>(new RestMessage(
+        HttpStatus.BAD_REQUEST.value(),
+        ex.getMessage(),
+        request.getRequest().getServletPath(),
+        USER_NOT_READY_FOR_TOURNAMENT
+    ),
         HttpStatus.BAD_REQUEST);
   }
 
@@ -95,11 +114,16 @@ public class ControllerAdvices extends ResponseEntityExceptionHandler {
   @Override
   protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
       HttpHeaders headers, HttpStatusCode status, WebRequest request) {
-
-    List<String> errors = ex.getBindingResult().getAllErrors().stream()
-        .map(ObjectError::getDefaultMessage).
-        collect(Collectors.toList());
-    return new ResponseEntity<>(new RestMessage(VALIDATION_ERROR, errors),
+    List<String> messages = ex.getBindingResult().getAllErrors().stream()
+        .map(ObjectError::getDefaultMessage)
+        .toList();
+    String message = messages.isEmpty() ? "Validation error occurred" : messages.get(0);
+    return new ResponseEntity<>(new RestMessage(
+        HttpStatus.BAD_REQUEST.value(),
+        message,
+        ((ServletWebRequest) request).getRequest().getServletPath(),
+        VALIDATION_ERROR
+    ),
         new HttpHeaders(), HttpStatus.BAD_REQUEST);
   }
 
@@ -110,9 +134,14 @@ public class ControllerAdvices extends ResponseEntityExceptionHandler {
    * @return a ResponseEntity with a custom message and an INTERNAL_SERVER_ERROR status
    */
   @ExceptionHandler(Exception.class)
-  public ResponseEntity<RestMessage> handleExceptions(Exception ex) {
+  public ResponseEntity<RestMessage> handleExceptions(Exception ex, ServletWebRequest request) {
     ex.printStackTrace();
-    return new ResponseEntity<>(new RestMessage(UNEXPECTED_ERROR, List.of(ex.getMessage())),
+    return new ResponseEntity<>(new RestMessage(
+        HttpStatus.INTERNAL_SERVER_ERROR.value(),
+        ex.getMessage(),
+        request.getRequest().getServletPath(),
+        UNEXPECTED_ERROR
+    ),
         HttpStatus.INTERNAL_SERVER_ERROR);
   }
 
